iss#111 Migrate MainActivity to Navigation Component and Fragment: HistoryFragment: added menu